# shallow_dive_workflow

./: .env  .env.example  README.md  main.py  pyproject.toml
reports/: shallow_dive_BABA_20260118.md
shallow_dive/: __init__.py  citations.py  config.py  data_sources.py  runner.py  sections.py  state.py  workflow.py
